--- a/ML/notebooks/pso_implementation.ipynb
+++ b/ML/notebooks/pso_implementation.ipynb
@@ -6,16 +6,16 @@
    "id": "094ee370-aaa2-48d5-a194-e4614a6ed8ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T07:41:46.726991Z",
-     "iopub.status.busy": "2024-12-09T07:41:46.725988Z",
-     "iopub.status.idle": "2024-12-09T07:41:46.731163Z",
-     "shell.execute_reply": "2024-12-09T07:41:46.731163Z"
+     "iopub.execute_input": "2024-12-09T08:42:35.129984Z",
+     "iopub.status.busy": "2024-12-09T08:42:35.128963Z",
+     "iopub.status.idle": "2024-12-09T08:42:35.133842Z",
+     "shell.execute_reply": "2024-12-09T08:42:35.133842Z"
     },
     "papermill": {
-     "duration": 0.013174,
-     "end_time": "2024-12-09T07:41:46.733169",
+     "duration": 0.011012,
+     "end_time": "2024-12-09T08:42:35.135939",
      "exception": false,
-     "start_time": "2024-12-09T07:41:46.719995",
+     "start_time": "2024-12-09T08:42:35.124927",
      "status": "completed"
     },
     "tags": []
@@ -26,7 +26,7 @@
     "import os\n",
     "\n",
     "# Add the absolute path of the src folder to sys.path\n",
-    "sys.path.append(os.path.abspath('../ML/src'))"
+    "sys.path.append(os.path.abspath(r'C:\\Users\\asr12\\OneDrive\\Desktop\\AI_traffic_management\\ML\\src'))"
    ]
   },
   {
@@ -35,16 +35,16 @@
    "id": "374ec448-3fca-4c02-976c-516dbbb961bb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T07:41:46.738190Z",
-     "iopub.status.busy": "2024-12-09T07:41:46.738190Z",
-     "iopub.status.idle": "2024-12-09T07:41:47.424515Z",
-     "shell.execute_reply": "2024-12-09T07:41:47.423489Z"
+     "iopub.execute_input": "2024-12-09T08:42:35.143889Z",
+     "iopub.status.busy": "2024-12-09T08:42:35.143889Z",
+     "iopub.status.idle": "2024-12-09T08:42:36.186279Z",
+     "shell.execute_reply": "2024-12-09T08:42:36.185591Z"
     },
     "papermill": {
-     "duration": 0.691337,
-     "end_time": "2024-12-09T07:41:47.426519",
+     "duration": 1.049422,
+     "end_time": "2024-12-09T08:42:36.187287",
      "exception": false,
-     "start_time": "2024-12-09T07:41:46.735182",
+     "start_time": "2024-12-09T08:42:35.137865",
      "status": "completed"
     },
     "tags": []
@@ -64,7 +64,8 @@
       "Road 3 - Green Light: 55 seconds, Red Light: 145 seconds, Priority: 2\n",
       "Road 1 - Green Light: 55 seconds, Red Light: 145 seconds, Priority: 3\n",
       "Road 4 - Green Light: 35 seconds, Red Light: 165 seconds, Priority: 4\n",
-      "Optimized timings saved to ../ML/outputs/results/optimized_durations.json\n"
+      "Optimized timings saved to ../ML/outputs/results/optimized_durations.json\n",
+      "Data of 4 roads ../ML/outputs/results/emergency.json\n"
      ]
     }
    ],
@@ -78,7 +79,7 @@
     "# Define paths for input CSV files and output JSON file\n",
     "input_folder = \"../ML/outputs/metrics\"  # Root folder where video subfolders are located\n",
     "output_file = \"../ML/outputs/results/optimized_durations.json\"\n",
-    "\n",
+    "emergency_file = \"../ML/outputs/results/emergency.json\"\n",
     "# Ensure the output directory exists\n",
     "os.makedirs(os.path.dirname(output_file), exist_ok=True)\n",
     "\n",
@@ -191,7 +192,10 @@
     "with open(output_file, \"w\") as file:\n",
     "    json.dump(optimized_timings, file, indent=4)\n",
     "print(f\"Optimized timings saved to {output_file}\")\n",
-    "\n"
+    "\n",
+    "with open(emergency_file, \"w\") as file:\n",
+    "    json.dump(vehicle_data_for_algo, file, indent=4)\n",
+    "print(f\"Data of 4 roads {emergency_file}\")"
    ]
   },
   {
@@ -200,10 +204,10 @@
    "id": "f683a1b4-b161-4b0b-a8e5-c3386ecd841a",
    "metadata": {
     "papermill": {
-     "duration": 0.000993,
-     "end_time": "2024-12-09T07:41:47.429510",
+     "duration": 0.001017,
+     "end_time": "2024-12-09T08:42:36.192304",
      "exception": false,
-     "start_time": "2024-12-09T07:41:47.428517",
+     "start_time": "2024-12-09T08:42:36.191287",
      "status": "completed"
     },
     "tags": []
@@ -232,14 +236,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 3.653455,
-   "end_time": "2024-12-09T07:41:47.788811",
+   "duration": 4.305867,
+   "end_time": "2024-12-09T08:42:36.544357",
    "environment_variables": {},
    "exception": null,
    "input_path": "C:\\Users\\asr12\\OneDrive\\Desktop\\AI_traffic_management\\ML\\notebooks\\pso_implementation.ipynb",
    "output_path": "C:\\Users\\asr12\\OneDrive\\Desktop\\AI_traffic_management\\ML\\notebooks\\pso_implementation.ipynb",
    "parameters": {},
-   "start_time": "2024-12-09T07:41:44.135356",
+   "start_time": "2024-12-09T08:42:32.238490",
    "version": "2.6.0"
   }
  },
