--- a/ML/notebooks/pso_implementation.ipynb
+++ b/ML/notebooks/pso_implementation.ipynb
@@ -6,16 +6,16 @@
    "id": "094ee370-aaa2-48d5-a194-e4614a6ed8ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T08:42:35.129984Z",
-     "iopub.status.busy": "2024-12-09T08:42:35.128963Z",
-     "iopub.status.idle": "2024-12-09T08:42:35.133842Z",
-     "shell.execute_reply": "2024-12-09T08:42:35.133842Z"
+     "iopub.execute_input": "2024-12-09T09:16:44.490091Z",
+     "iopub.status.busy": "2024-12-09T09:16:44.490091Z",
+     "iopub.status.idle": "2024-12-09T09:16:44.498307Z",
+     "shell.execute_reply": "2024-12-09T09:16:44.497319Z"
     },
     "papermill": {
-     "duration": 0.011012,
-     "end_time": "2024-12-09T08:42:35.135939",
+     "duration": 0.015188,
+     "end_time": "2024-12-09T09:16:44.500345",
      "exception": false,
-     "start_time": "2024-12-09T08:42:35.124927",
+     "start_time": "2024-12-09T09:16:44.485157",
      "status": "completed"
     },
     "tags": []
@@ -35,16 +35,16 @@
    "id": "374ec448-3fca-4c02-976c-516dbbb961bb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T08:42:35.143889Z",
-     "iopub.status.busy": "2024-12-09T08:42:35.143889Z",
-     "iopub.status.idle": "2024-12-09T08:42:36.186279Z",
-     "shell.execute_reply": "2024-12-09T08:42:36.185591Z"
+     "iopub.execute_input": "2024-12-09T09:16:44.505883Z",
+     "iopub.status.busy": "2024-12-09T09:16:44.504309Z",
+     "iopub.status.idle": "2024-12-09T09:16:45.545129Z",
+     "shell.execute_reply": "2024-12-09T09:16:45.544122Z"
     },
     "papermill": {
-     "duration": 1.049422,
-     "end_time": "2024-12-09T08:42:36.187287",
+     "duration": 1.04491,
+     "end_time": "2024-12-09T09:16:45.547152",
      "exception": false,
-     "start_time": "2024-12-09T08:42:35.137865",
+     "start_time": "2024-12-09T09:16:44.502242",
      "status": "completed"
     },
     "tags": []
@@ -54,18 +54,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing file: ../ML/outputs/metrics\\video1\\video1_metrics.csv\n",
-      "Processing file: ../ML/outputs/metrics\\video2\\video2_metrics.csv\n",
-      "Processing file: ../ML/outputs/metrics\\video3\\video3_metrics.csv\n",
-      "Processing file: ../ML/outputs/metrics\\video4\\video4_metrics.csv\n",
+      "Processing file: C:/Users/asr12/OneDrive/Desktop/AI_traffic_management/ML/outputs/metrics\\video1\\video1_metrics.csv\n",
+      "Processing file: C:/Users/asr12/OneDrive/Desktop/AI_traffic_management/ML/outputs/metrics\\video2\\video2_metrics.csv\n",
+      "Processing file: C:/Users/asr12/OneDrive/Desktop/AI_traffic_management/ML/outputs/metrics\\video3\\video3_metrics.csv\n",
+      "Processing file: C:/Users/asr12/OneDrive/Desktop/AI_traffic_management/ML/outputs/metrics\\video4\\video4_metrics.csv\n",
       "Processed data for 4 roads.\n",
       "[{'index': 'Road 1', 'vehicles': np.float64(25.125), 'emergency': False}, {'index': 'Road 2', 'vehicles': np.float64(24.916666666666668), 'emergency': True}, {'index': 'Road 3', 'vehicles': np.float64(25.136363636363637), 'emergency': False}, {'index': 'Road 4', 'vehicles': np.float64(15.214285714285714), 'emergency': False}]\n",
       "Road 2 - Green Light: 55 seconds, Red Light: 145 seconds, Priority: 1\n",
       "Road 3 - Green Light: 55 seconds, Red Light: 145 seconds, Priority: 2\n",
       "Road 1 - Green Light: 55 seconds, Red Light: 145 seconds, Priority: 3\n",
       "Road 4 - Green Light: 35 seconds, Red Light: 165 seconds, Priority: 4\n",
-      "Optimized timings saved to ../ML/outputs/results/optimized_durations.json\n",
-      "Data of 4 roads ../ML/outputs/results/emergency.json\n"
+      "Optimized timings saved to C:/Users/asr12/OneDrive/Desktop/AI_traffic_management/ML/outputs/results/optimized_durations.json\n",
+      "Data of 4 roads C:/Users/asr12/OneDrive/Desktop/AI_traffic_management/ML/outputs/results/emergency.json\n"
      ]
     }
    ],
@@ -77,9 +77,9 @@
     "from pso_algorithm import traffic_light_algorithm\n",
     "\n",
     "# Define paths for input CSV files and output JSON file\n",
-    "input_folder = \"../ML/outputs/metrics\"  # Root folder where video subfolders are located\n",
-    "output_file = \"../ML/outputs/results/optimized_durations.json\"\n",
-    "emergency_file = \"../ML/outputs/results/emergency.json\"\n",
+    "input_folder = \"C:/Users/asr12/OneDrive/Desktop/AI_traffic_management/ML/outputs/metrics\"  # Root folder where video subfolders are located\n",
+    "output_file =  \"C:/Users/asr12/OneDrive/Desktop/AI_traffic_management/ML/outputs/results/optimized_durations.json\"\n",
+    "emergency_file = \"C:/Users/asr12/OneDrive/Desktop/AI_traffic_management/ML/outputs/results/emergency.json\"\n",
     "# Ensure the output directory exists\n",
     "os.makedirs(os.path.dirname(output_file), exist_ok=True)\n",
     "\n",
@@ -204,10 +204,10 @@
    "id": "f683a1b4-b161-4b0b-a8e5-c3386ecd841a",
    "metadata": {
     "papermill": {
-     "duration": 0.001017,
-     "end_time": "2024-12-09T08:42:36.192304",
+     "duration": 0.002002,
+     "end_time": "2024-12-09T09:16:45.551211",
      "exception": false,
-     "start_time": "2024-12-09T08:42:36.191287",
+     "start_time": "2024-12-09T09:16:45.549209",
      "status": "completed"
     },
     "tags": []
@@ -236,14 +236,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 4.305867,
-   "end_time": "2024-12-09T08:42:36.544357",
+   "duration": 7.12049,
+   "end_time": "2024-12-09T09:16:48.635374",
    "environment_variables": {},
    "exception": null,
    "input_path": "C:\\Users\\asr12\\OneDrive\\Desktop\\AI_traffic_management\\ML\\notebooks\\pso_implementation.ipynb",
    "output_path": "C:\\Users\\asr12\\OneDrive\\Desktop\\AI_traffic_management\\ML\\notebooks\\pso_implementation.ipynb",
    "parameters": {},
-   "start_time": "2024-12-09T08:42:32.238490",
+   "start_time": "2024-12-09T09:16:41.514884",
    "version": "2.6.0"
   }
  },
